# airbnb-clone-backend

./: db.sqlite3  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_options.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_alter_experience_end.py  0003_experience_category_alter_perk_detail_and_more.py
medias/: models.py  serializers.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py  0003_alter_photo_experience_alter_photo_room_and_more.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_category_alter_room_owner.py
rooms/templates/: room.html  rooms.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  (+2 more)
wishlists/: models.py  serializers.py  urls.py  views.py
(+2 files in other folders)
